--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Oldenburg&display=swap"
+      href="https://fonts.googleapis.com/css2?family=BBH+Bogle&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Oldenburg&display=swap"
       rel="stylesheet"
     />
     <title>MTG dutch pauper league stats</title>
