--- a/index.html
+++ b/index.html
@@ -12,6 +12,14 @@
       rel="stylesheet"
     />
     <title>MTG dutch pauper league stats</title>
+    <!-- Github pages workaround -->
+    <script>
+      var redirect = sessionStorage.redirect;
+      delete sessionStorage.redirect;
+      if (redirect && redirect !== location.href) {
+        history.replaceState(null, null, redirect);
+      }
+    </script>
   </head>
   <body>
     <div id="root">
