--- a/public/404.html
+++ b/public/404.html
@@ -1,37 +1,9 @@
-<!-- Github pages workaround -->
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/loader.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=BBH+Bogle&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Oldenburg&display=swap"
-      rel="stylesheet"
-    />
-    <title>MTG dutch pauper league stats</title>
-    <script>
-      var redirect = sessionStorage.redirect;
-      delete sessionStorage.redirect;
-      if (redirect && redirect !== location.href) {
-        history.replaceState(null, null, redirect);
-      }
-    </script>
+    <meta http-equiv="refresh" content="0; url=./" />
   </head>
   <body>
-    <div id="root">
-      <div class="loader">
-        <span></span>
-        <span></span>
-        <span></span>
-      </div>
-    </div>
-    <script>
-      sessionStorage.redirect = location.href;
-    </script>
-    <script type="module" src="/src/main.tsx"></script>
+    Github pages 404
   </body>
 </html>
