--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <title>MTG dutch pauper league stats</title>
     <!-- Github pages workaround -->
     <script>
-      var redirect = sessionStorage.redirect;
-      delete sessionStorage.redirect;
-      if (redirect && redirect !== location.href) {
-        history.replaceState(null, null, redirect);
-      }
+      // Restore the path from sessionStorage
+      (function () {
+        var redirect = sessionStorage.getItem('redirect');
+        sessionStorage.removeItem('redirect');
+        if (redirect && redirect !== location.pathname) {
+          history.replaceState(null, null, redirect);
+        }
+      })();
     </script>
   </head>
   <body>
